[tool.poetry]
name = "dvpwa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
aiohttp-jinja2 = "1.1.0"
aiohttp-session = "2.7.0"
aiohttp = "3.5.3"
aiopg = "0.15.0"
aioredis = "1.2.0"
async-timeout = "3.0.1"
attrs = "18.2.0"
chardet = "3.0.4"
hiredis = "0.3.1"
idna = "2.8"
jinja2 = "2.10"
markupsafe = "1.1.0"
multidict = "4.5.2"
psycopg2 = "2.9.5"
pyyaml = "3.13"
trafaret-config = "2.0.2"
trafaret = "1.2.0"
yarl = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
